vcs/specs/parser/fail/expressions/invalid_exists.vr
// @test: parse-fail
// @level: L0
// @tags: parser, expressions, exists, quantifier, error
// @description: exists expression missing binding
// @expected-error: E018

fn test() {
    let found = exists . x > 0;  // Missing binding before dot
}
